--- a/app/src/main/res/layout/tuner_fragment.xml
+++ b/app/src/main/res/layout/tuner_fragment.xml
@@ -7,6 +7,16 @@
     android:background="@android:color/white"
     android:id="@+id/tuner_view">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </ScrollView>
+
     <TextView
         android:id="@+id/note_text"
         android:layout_width="match_parent"
